...
            .ja: "中のノートは削除されません。すべての端末で最上位フォルダに戻ります。",
            .ko: "안에 있는 노트는 삭제되지 않습니다. 모든 기기에서 최상위로 이동합니다.",
            .th: "สมุดบันทึกข้างในจะไม่ถูกลบ แต่จะย้ายกลับไปที่ระดับบนสุดในทุกอุปกรณ์"
        ],
        "delete_item": [
            .zhHant: "刪除項目",
            .en: "Delete Item",
            .zhHans: "删除项目",
            .ja: "項目を削除",
            .ko: "항목 삭제",
            .th: "ลบรายการ"
        ],
        "delete_message": [
...
            .ja: "同梱ドキュメントが見つかりません。ご報告ください。",
            .ko: "동봉된 문서를 찾을 수 없습니다. 알려 주세요.",
            .th: "ไม่พบเอกสารที่มากับแอป โปรดแจ้งปัญหานี้"
        ],
        "done": [
            .zhHant: "完成",
            .en: "Done",
            .zhHans: "完成",
            .ja: "完了",
            .ko: "완료",
            .th: "เสร็จสิ้น"
        ],
        "download_all": [
...
            .ja: "残り%@日",
            .ko: "%@일 남음",
            .th: "เหลืออีก %@ วัน"
        ],
        "trash_delete_forever": [
            .zhHant: "永久刪除",
            .en: "Delete Permanently",
            .zhHans: "永久删除",
            .ja: "完全に削除",
            .ko: "영구 삭제",
            .th: "ลบถาวร"
        ],
        "trash_delete_forever_confirm_message": [
...
            .ja: "無題のノート",
            .ko: "제목 없는 노트",
            .th: "บันทึกที่ไม่มีชื่อ"
        ],
        "user_manual": [
            .zhHant: "操作手冊",
            .en: "User Manual",
            .zhHans: "操作手册",
            .ja: "操作マニュアル",
            .ko: "사용 설명서",
            .th: "คู่มือการใช้งาน"
        ],
        "user_manual_desc": [
...
